[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/EasyLAN/EasyLANHost.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainHost.gd" type="Script" id=2]
[ext_resource path="res://assets/PatrickHandFontRes.tres" type="DynamicFont" id=3]

[node name="MainHost" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyLANHost" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -136.0
margin_right = 136.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 3 )
text = "Joining Game..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersConnected" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TableTitle" type="Label" parent="PlayersConnected"]
margin_left = 162.0
margin_top = 104.0
margin_right = 862.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 3 )
text = "Player Connected ID"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="PlayersConnected"]
margin_left = 162.0
margin_top = 177.0
margin_right = 862.0
margin_bottom = 181.0

[node name="PlayerList" type="VBoxContainer" parent="PlayersConnected"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -103.0
margin_right = 350.0
margin_bottom = 181.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.5
margin_top = -105.973
margin_right = 80.5
margin_bottom = -26.9734
custom_fonts/font = ExtResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}
